# discord-guild-agent

./: .env.example  .gitignore  config.yaml  pyproject.toml
migrations/: 001_initial.sql  002_image_analysis.sql  003_dedupe_indexes.sql
src/: main.py
src/agents/: __init__.py  agent.py  manager.py
src/ai/: __init__.py  context.py  provider.py
src/config/: __init__.py  settings.py
src/council/: __init__.py  council.py
src/dashboard/: __init__.py  service.py  web.py
src/dashboard/static/: app.js  index.html  styles.css
src/database/: __init__.py  connection.py  migration.py  repository.py
src/discord/: __init__.py  bot.py  events.py  message_parser.py  processor.py
src/logging_/: __init__.py  logger.py
src/memory/: __init__.py  long_term.py  short_term.py  summary.py
src/override/: __init__.py  override.py
src/queue/: __init__.py  task_queue.py
src/slash/: __init__.py  commands.py
src/tools/: __init__.py  base.py  discord_tools copy.py  discord_tools.py  registry.py
